# spmd_types

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  LICENSE  MEGATRON_QUICKSTART.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish_release.yml
docs/: conf.py  design.md  global_spmd_types.md  index.md  key_concepts.md  local_spmd_types.md
docs/api/: checker.md  index.md  spmd_types.md
spmd_types/: __init__.py  _backward_hooks.py  _checker.py  _collectives.py  _dist.py  _dtensor.py  _dtensor_checker.py  _dtype_utils.py  _frame.py  _local.py  _mesh.py  _mesh_axis.py  _mesh_region.py  _raw_dist.py  _reinterpret_mesh.py  _scalar.py  _scalar_sentinel.py  _state.py  _test_utils.py  _testing.py  _traceback.py  _type_attr.py  _vmap.py  checker.py  dynamo_test.py  local_test.py  runtime.py  traceback_test.py  types.py  types_test.py
spmd_types/_checker/: README.md  __init__.py
tests/: api_test.py  assert_local_block_test.py  backward_hooks_test.py  checker_test.py  collectives_test.py  docs_test.py  dtensor_test.py  dtype_options_test.py  dynamo_test.py  global_spmd_test.py  import_test.py  local_test.py  mesh_axis_test.py  mesh_region_test.py  readme_test.py  traceback_test.py  types_test.py  vmap_test.py
