[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spmd-types"
version = "0.1.0"
description = "A type system for distributed (SPMD) tensor computations in PyTorch"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [
    {name = "Meta Platforms, Inc."},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.4.0",
]

[project.urls]
Homepage = "https://github.com/pytorch/spmd_types"
Repository = "https://github.com/pytorch/spmd_types"
Issues = "https://github.com/pytorch/spmd_types/issues"

[tool.setuptools.packages.find]
include = ["spmd_types*"]
exclude = ["*_test*", "*_test.py"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["*_test.py"]
